<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistrationFragment">



    <EditText

        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/Email"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textSize="15sp" />


    <EditText

        android:id="@+id/et_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:hint="@string/Password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="15sp" />

    <Button

        android:id="@+id/btn_sign_in"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/btn_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/Dont_have"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp" />


    <EditText

        android:id="@+id/et_email_reg"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_registration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/Email"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textSize="15sp" />


    <EditText

        android:id="@+id/et_password_reg"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_email_reg"
        android:layout_centerHorizontal="true"
        android:hint="@string/Password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="15sp" />

    <EditText

        android:id="@+id/et_name_reg"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_password_reg"
        android:layout_centerHorizontal="true"
        android:hint="@string/Name"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/et_name_reg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="REGISTRATION"
        android:textStyle="bold" />


</RelativeLayout>